-
Type:
Engineering Test
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Storage Execution
-
Fully Compatible
-
Storage Execution 2026-01-19, Storage Execution 2026-02-02, Storage Execution 2026-02-16
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We own a number of tests that expect the server to crash (index_build_killop_secondary_after_commit.js, index_secondary_awaiting_primary_abort_crash_on_commit.js but that will cause time outs after crashing when run on Windows variants. This leads to spurious Build Failures where the approach has been to either mark the BFs as trivial or to exclude them from running on Windows variants, but this leads to a bit of time wasted each time we have to investigate issues of this nature
- is duplicated by
-
SERVER-58097 preload psapi.dll to avoid lockup when writing minidump file
-
- Closed
-
- related to
-
SERVER-122300 Windows Hangs Upon Intentionally Terminating the Server
-
- Closed
-