SERVER-116978 Load DbgHelp to prevent loader lock when writing minidump (#46377)

GitOrigin-RevId: 0042145f64d4cbab5f643e78a64d477696f6c27d