jstests/noPassthrough/index_builds/index_secondary_awaiting_primary_abort_crash_on_commit.js
@@ -7,7 +7,6 @@
  *   requires_commit_quorum,
  *   requires_fcv_71,
  *   requires_replication,
- *   incompatible_with_windows_tls,
  * ]
  */
 import {configureFailPoint} from "jstests/libs/fail_point_util.js";
