jstests/noPassthrough/oplog/oplog_application_while_recovering_must_succeed.js
@@ -5,7 +5,6 @@
  * @tags: [
  *   requires_persistence,
  *   requires_replication,
- *   incompatible_with_windows_tls,
  * ]
  */
 import {ReplSetTest} from "jstests/libs/replsettest.js";
